--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark" style="padding-bottom: 4.5rem;">
       <a class="navbar-brand" href="" style="font-family: 'Ubuntu', sans-serif; font-size: 40px; font-weight: bold;">tindog</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -60,8 +60,8 @@
       
       <div class="col-lg-6">
         <h1 class="big-heading" style="font-family: 'Montserrat', sans-serif; font-size: 56px; line-height: 1.5; color: white;">Meet new and<br>interesting dogs<br>nearby.</h1>
-        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+        <a href="https://www.youtube.com/watch?v=pw_MBSQAhnQ&ab_channel=Coldy"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button></a>
+        <a href="https://www.youtube.com/watch?v=p0ds1c5h8K4&ab_channel=Doityboy"><button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button></a>
       </div>
     
       <div class="col-lg-6">
@@ -159,7 +159,7 @@
                   <p>5 Matches Per Day</p>
                   <p>10 Messages Per Day</p>
                   <p>Unlimited App Usage</p>
-                  <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+                  <a href="https://www.youtube.com/watch?v=so_7WcDkjxs&ab_channel=Trashy"><button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button></a>
               </div>
           </div>
       </div>
@@ -173,7 +173,7 @@
                   <p>Unlimited Matches</p>
                   <p>Unlimited Messages</p>
                   <p>Unlimited App Usage</p>
-                  <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+                  <a href="https://www.youtube.com/watch?v=6Cr_8tvvQ0k&ab_channel=Asha7494"><button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button></a>
               </div>
           </div>
       </div>
@@ -188,7 +188,7 @@
                   <p>Unlimited Matches</p>
                   <p>Unlimited Messages</p>
                   <p>Unlimited App Usage</p>
-                  <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+                  <a href="https://www.youtube.com/watch?v=7BqLKGJZ9lI&ab_channel=RoundRodent"><button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button></a>
               </div>
           </div>
       </div>
@@ -201,8 +201,8 @@
   <section id="cta">
 
     <h3 style="font-size: 56px">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+    <a href="https://www.youtube.com/watch?v=YBS8rJvxnKo&ab_channel=Shamir"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button></a>
+    <a href="https://www.youtube.com/watch?v=KV02Ziacfhs&ab_channel=TheKrispyKringe"><button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button></a>
 
   </section>
 
@@ -211,10 +211,10 @@
 
   <footer id="footer">
 
-    <i class="fa-brands fa-facebook" style="margin:20px 10px 20px 10px"></i>
-    <i class="fa-brands fa-twitter" style="margin:20px 10px 20px 10px"></i>
-    <i class="fa-brands fa-instagram" style="margin:20px 10px 20px 10px"></i>
-    <i class="fa-solid fa-envelope" style="margin:20px 10px 20px 10px"></i>
+    <a href="https://www.youtube.com/channel/UCm_6LWI1tI58DXk9cT8sxEA"><button class="social-button"><i class="fa-brands fa-facebook" style="margin:20px 10px 20px 10px"></i></button></a>
+    <a href="https://twitter.com/SaaMFN_"><button class="social-button"><i class="fa-brands fa-twitter" style="margin:20px 10px 20px 10px"></i></button></a>
+    <a href="https://www.instagram.com/samkou334/"><button class="social-button"><i class="fa-brands fa-instagram" style="margin:20px 10px 20px 10px"></i></button></a>
+    <a href="https://www.youtube.com/watch?v=hIfwwo2WI1Y&ab_channel=Amazing_avi"><button class="social-button"><i class="fa-solid fa-envelope" style="margin:20px 10px 20px 10px"></i></button></a>
     <p>© Copyright TinDog</p>
 
   </footer>
